HVAC Backup 2/objects/SAP_Credential__mdt.object
<CustomObject>
    <fields>
        <fullName>Cookie__c</fullName>
        <label>Cookie</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SAP Credential</label>
    <pluralLabel>SAP Credentials</pluralLabel>
</CustomObject>